--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "src/assets/styles/theme.scss"
+              "node_modules/primeng/resources/themes/lara-light-green/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
