--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/service-worker": "^17.0.0",
+    "chart.js": "^4.4.2",
     "primeicons": "^6.0.1",
     "primeng": "^17.11.0",
     "rxjs": "~7.8.0",
