--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/service-worker": "^17.0.0",
     "chart.js": "^4.4.2",
+    "firebase": "^10.10.0",
     "primeicons": "^6.0.1",
     "primeng": "^17.11.0",
     "rxjs": "~7.8.0",
