--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "^17.0.0",
     "chart.js": "^4.4.2",
     "firebase": "^10.10.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.11.0",
     "rxjs": "~7.8.0",
