update shopping list service & interface - update user interface - update .ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+/src/assets/images/892a5b4479d6ec7322857e53631a2ecc.jpg
+/src/assets/images/free_cam_8_7_0.msi
